fixing .container align center

--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,6 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
   margin-top: 10px;
   max-width: 100%;
   max-height: 100%;
@@ -538,7 +537,6 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
   margin-top: 10px;
   max-width: 100%;
   padding: 13px;
@@ -549,7 +547,6 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
 }
 
 /* ============================================= */
@@ -564,7 +561,6 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
   }
 }
 
@@ -655,7 +651,6 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     text-align: center;
   }
 
