--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -6,7 +6,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+
 }
 
 @mixin flexy($disp: null, $dir: null, $wrap: null, $just: null, $align: null) {
